error labesl on ppm pro gear weights no longer shift

--- a/src/components/Customer/PPM/PPM.module.scss
+++ b/src/components/Customer/PPM/PPM.module.scss
@@ -13,7 +13,7 @@
 
     :global(.usa-form-group--error),
     :global(.usa-form-group.warning) {
-      @include u-margin-top(2);
+      margin-top: 1.6rem;
     }
 
     // last section wrapper on mobile shouldn't render divider
